--- a/public/auth/spa.html
+++ b/public/auth/spa.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>sysgas</title>
+  <title>amina</title>
   <!-- our third party styles -->
   <link rel="stylesheet" href="styles/third/ionicons.min.css">
   <link rel="stylesheet" type="text/css" href="styles/spa.signin.css">
@@ -49,7 +49,7 @@
   <toast></toast>
   <div class="wrapper">
     <div class="spa-shell-head">
-      <div class="spa-shell-head-logo"></div>
+      <!-- <div class="spa-shell-head-logo"></div> -->
     </div>
     <div class="spa-shell-main">
       <div class="spa-shell-main-banner">
