--- a/public/app/expense/expense-list.template.html
+++ b/public/app/expense/expense-list.template.html
@@ -1,12 +1,15 @@
 <div class="panel" ng-show="$ctrl.list.length > 0">
-	<div class="bar">
-		<h3 class="title">Expense</h3>
+	<div class="btn-toolbar justify-content-between">
+		<h3 class="title">Achats</h3>
+		<div>
+			<button class="btn btn-success" ng-click="$ctrl.editMode = true" href="">Nouvelle achat</button>
+		</div>
 	</div>
 	<div class="row">
 	  <div class="col-sm-6">
 	    <div class="card">
 	      <div class="card-body">
-	      	<h3>Outcoume</h3>
+	      	<h3>Impayés</h3>
 			<span>{{$ctrl.list | filter:{status:0} | sumOfValue:'amount' | number}} F.CFA</span>
 	      </div>
 	    </div>
@@ -14,7 +17,7 @@
 	  <div class="col-sm-6">
 	    <div class="card">
 	      <div class="card-body">
-	        <h3>Paid</h3>
+	        <h3>Payés</h3>
 			<span>{{$ctrl.list | filter:{status:1} | sumOfValue:'amount' | number}} F.CFA</span>
 	      </div>
 	    </div>
@@ -30,9 +33,9 @@
 			<tr>
 				<th>Date</th>
 				<th>NO.</th>
-				<th>Supplier</th>
-				<th>Balance</th>
-				<th>Amount</th>
+				<th>Fournisseur</th>
+				<th>Impayé</th>
+				<th>Montant</th>
 				<th>Status</th>
 				<th class="last">
 					Action
@@ -51,15 +54,14 @@
 				<td>{{c.balance}} F.CFA</td>
 				<td>{{c.amount}} F.CFA</td>
 				<td>
-					<b ng-show="c.status==0">Pending</b>
-					<b ng-show="c.status==1">Paid</b>
-					<b ng-show="c.status==2">Cancelled</b>
+					<b ng-show="c.status==0">An attente</b>
+					<b ng-show="c.status==1">Payé</b>
+					<b ng-show="c.status==2">Annulé</b>
 				</td>
 				<td class="last">
 					<a href="#/expense/{{c._id}}">
-						<span ng-show="c.status==0">Proceed</span>
-						<span ng-show="c.status==1">Details</span>
-						<span ng-show="c.status==2">Dismissed</span>
+						<span ng-show="c.status==0">Modifié</span>
+						<span ng-show="c.status!==0">Details</span>
 					</a>
 				</td>
 			</tr>
@@ -68,6 +70,15 @@
 </div>
 
 <div class="panel" ng-show="$ctrl.list.length == 0">
-	<h1>No expenses</h1>
-	<button ng-click="$ctrl.editExpense()">New</button>
+	<div class="empty-list">
+		<h3 class="text-center">Pas d'achat</h3>
+		<a ng-click="$ctrl.editMode = true" href="" class="btn btn-success">Nouvelle achat</a>
+	</div>
+</div>
+
+<div ng-switch="$ctrl.editMode">
+	<div ng-switch-when="true">
+		<expense-suppliers 
+		on-close="$ctrl.editMode = false"></expense-suppliers>
+	</div>
 </div>
