--- a/public/app/payment/payment-list.template.html
+++ b/public/app/payment/payment-list.template.html
@@ -1,12 +1,12 @@
 <div class="panel">
 	<div class="bar">
-		<h3 class="title">Payment</h3>
+		<h3 class="title">Paiements</h3>
 	</div>
 	<my-tabs>
-	  <my-pane title="Sale">
+	  <my-pane title="Ventes">
 	  	<payment-sale-list></payment-sale-list>
 	  </my-pane>
-	  <my-pane title="Expense">
+	  <my-pane title="Achats">
 	    <payment-expense-list></payment-expense-list>
 	  </my-pane>
 	</my-tabs>
