--- a/public/app/sale/sale-list.template.html
+++ b/public/app/sale/sale-list.template.html
@@ -1,15 +1,15 @@
 <div class="panel" ng-show="$ctrl.list.length > 0">
 	<div class="bar">
-		<h3 class="title">Sale</h3>
+		<h3 class="title">Ventes</h3>
 		<div>
-			<a class="btn btn-success" href="#/sale/edit/0">New sale</a>
+			<a class="btn btn-success" ng-click="$ctrl.editMode = true" href="">Nouvelle vente</a>
 		</div>
 	</div>
 	<div class="row">
 	  <div class="col-sm-6">
 	    <div class="card">
 	      <div class="card-body">
-	      	<h3>Outcoume</h3>
+	      	<h3>En attente</h3>
 			<span>{{$ctrl.list | filter:{status:0} | sumOfValue:'amount' | number}} F.CFA</span>
 	      </div>
 	    </div>
@@ -17,7 +17,7 @@
 	  <div class="col-sm-6">
 	    <div class="card">
 	      <div class="card-body">
-	        <h3>Paid</h3>
+	        <h3>Payé</h3>
 			<span>{{$ctrl.list | filter:{status:1} | sumOfValue:'amount' | number}} F.CFA</span>
 	      </div>
 	    </div>
@@ -34,9 +34,9 @@
 				<tr>
 					<th>Date</th>
 					<th>NO.</th>
-					<th>Customer</th>
-					<th>Balance</th>
-					<th>Amount</th>
+					<th>Client</th>
+					<th>Reste à payer</th>
+					<th>Montant</th>
 					<th>Status</th>
 					<th class="last">
 						Action
@@ -53,15 +53,14 @@
 					<td>{{c.balance}} F.CFA</td>
 					<td>{{c.amount}} F.CFA</td>
 					<td>
-						<b ng-show="{{c.status==0}}">Pending</b>
-						<b ng-show="{{c.status==1}}">Paid</b>
-						<b ng-show="{{c.status==2}}">Cancelled</b>
+						<b ng-show="{{c.status==0}}">En attente</b>
+						<b ng-show="{{c.status==1}}">Payé</b>
+						<b ng-show="{{c.status==2}}">Annulé</b>
 					</td>
 					<td class="last">
 						<a href="#/sale/{{c._id}}">
-							<span ng-show="{{c.status==0}}"> Make payment</span>
-							<span ng-show="{{c.status==1}}"> Details</span>
-							<span ng-show="{{c.status==2}}"> Cancelled</span>
+							<span ng-show="{{c.status==0}}">Modifier</span>
+							<span ng-show="{{c.status!=0}}">Details</span>
 						</a>
 					</td>
 				</tr>
@@ -72,16 +71,14 @@
 
 <div class="panel" ng-show="$ctrl.list.length == 0">
 	<div class="empty-list">
-		<h3 class="text-center">No sales</h3>
+		<h3 class="text-center">Pas de vente</h3>
 	</div>
 </div>
 
 <div ng-switch="$ctrl.editMode">
 	<div ng-switch-when="true">
-		<sale-edit 
-		sale="$ctrl.sale" 
-		on-close="$ctrl.editMode = false"
-		on-save="$ctrl.update( sale )"></sale-edit>
+		<sale-customers 
+		on-close="$ctrl.editMode = false"></sale-customers>
 	</div>
 </div>
 
