--- a/public/app/spa.html
+++ b/public/app/spa.html
@@ -36,6 +36,7 @@
     <script src="../vendors/angular-moment-picker.js"></script>
     <script src="../vendors/ng-file-upload-shim.js"  ></script> <!-- for no html5 browsers support -->
     <script src="../vendors/ng-file-upload.js"       ></script>
+    <script src="../vendors/angular-translate.js"    ></script>
 
     <!-- our excel 3 party js -->
     <script src="../vendors/FileSaver.js"         ></script>
@@ -97,8 +98,8 @@
     <script src="customer/customer-edit.component.js"   ></script>
     <script src="customer/customer-detail.module.js"    ></script>
     <script src="customer/customer-detail.component.js" ></script>
-    <script src="customer/customer-sale.module.js"     ></script>
-    <script src="customer/customer-sale.component.js"  ></script>
+    <script src="customer/customer-sale.module.js"      ></script>
+    <script src="customer/customer-sale.component.js"   ></script>
 
 
     <!-- our item js -->
@@ -128,26 +129,30 @@
 
 
     <!-- sale item js -->
-    <script src="sale/sale-app.module.js"       ></script>
-    <script src="sale/sale-app.config.js"       ></script>
-    <script src="sale/sale-app.service.js"      ></script>
-    <script src="sale/sale-list.module.js"      ></script>
-    <script src="sale/sale-list.component.js"   ></script>
-    <script src="sale/sale-edit.module.js"      ></script>
-    <script src="sale/sale-edit.component.js"   ></script>
-    <script src="sale/sale-detail.module.js"    ></script>
-    <script src="sale/sale-detail.component.js" ></script>
+    <script src="sale/sale-app.module.js"          ></script>
+    <script src="sale/sale-app.config.js"          ></script>
+    <script src="sale/sale-app.service.js"         ></script>
+    <script src="sale/sale-list.module.js"         ></script>
+    <script src="sale/sale-list.component.js"      ></script>
+    <script src="sale/sale-edit.module.js"         ></script>
+    <script src="sale/sale-edit.component.js"      ></script>
+    <script src="sale/sale-detail.module.js"       ></script>
+    <script src="sale/sale-detail.component.js"    ></script>
+    <script src="sale/sale-customers.module.js"    ></script>
+    <script src="sale/sale-customers.component.js" ></script>
 
     <!-- expense item js -->
-    <script src="expense/expense-app.module.js"       ></script>
-    <script src="expense/expense-app.config.js"       ></script>
-    <script src="expense/expense-app.service.js"      ></script>
-    <script src="expense/expense-list.module.js"      ></script>
-    <script src="expense/expense-list.component.js"   ></script>
-    <script src="expense/expense-edit.module.js"      ></script>
-    <script src="expense/expense-edit.component.js"   ></script>
-    <script src="expense/expense-detail.module.js"    ></script>
-    <script src="expense/expense-detail.component.js" ></script>
+    <script src="expense/expense-app.module.js"          ></script>
+    <script src="expense/expense-app.config.js"          ></script>
+    <script src="expense/expense-app.service.js"         ></script>
+    <script src="expense/expense-list.module.js"         ></script>
+    <script src="expense/expense-list.component.js"      ></script>
+    <script src="expense/expense-edit.module.js"         ></script>
+    <script src="expense/expense-edit.component.js"      ></script>
+    <script src="expense/expense-detail.module.js"       ></script>
+    <script src="expense/expense-detail.component.js"    ></script>
+    <script src="expense/expense-suppliers.module.js"    ></script>
+    <script src="expense/expense-suppliers.component.js" ></script>
 
 
     <!-- report item js -->
