--- a/public/app/customer/customer-edit.template.html
+++ b/public/app/customer/customer-edit.template.html
@@ -2,62 +2,59 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Customer information</h5>
+        <h5 class="modal-title">Information client</h5>
         <button type="button" class="close" ng-click="$ctrl.close()">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         
-        <form name="form" novalidate>
-			<div class="row">
-              <div class="col-md-6 mb-3">
-                <label for="first_name">First name</label>
-                <input type="text" class="form-control" ng-model="$ctrl.customer.first_name">
-              </div>
-              <div class="col-md-6 mb-3">
-                <label for="last_name">Last name</label>
-                <input type="text" class="form-control" ng-model="$ctrl.customer.last_name">
-              </div>
-            </div>
-			<div class="mb-3">
-				<label for="name">Company name <span class="text-danger">*</span></label>
-				<input class="form-control" type="text" name="name" ng-model="$ctrl.customer.name" required>
-				<div ng-show="form.name.$touched && form.name.$invalid">
-					<span class="text-danger" ng-show="form.name.$error.required">Customer name is required</span>
-				</div>
-			</div>
-			<div class="mb-3">
-				<label for="phone">Telephone <span class="text-danger">*</span></label>
-				<input type="text" class="form-control" name="phone" ng-model="$ctrl.customer.phone" maxlength="8" required>
-				<div ng-show="form.phone.$touched && form.phone.$invalid">
-					<span class="text-danger" ng-show="form.phone.$error.required">Customer phone number is required</span>
-				</div>
-			</div>
-			<div class="mb-3">
-				<label for="email">Email <span class="text-danger">*</span></label>
-				<input type="email" class="form-control" name="email" ng-model="$ctrl.customer.email" required>
-				<div ng-show="form.email.$touched && form.email.$invalid">
-					<span class="text-danger" ng-show="form.email.$error.required">Customer email adresse is required</span>
-					<span class="text-danger" ng-show="form.email.$error.email">Valid email adresse is required</span>
-				</div>
-			</div>
-			<div class="mb-3">
-				<label for="owner">Owner</label>
-				<select name="owner" class="form-control" ng-model="$ctrl.customer.owner">
-					<option value="">No owner</option>
-					<option ng-repeat="r in $ctrl.users" value="{{r.name}}">{{r.name}}</option>
-				</select>
-				<div ng-show="form.owner.$touched && form.owner.$invalid">
-					<span class="text-danger" ng-show="form.owner.$error.required">Owner is required</span>
-				</div>
-			</div>
-		</form>
+	      <form name="form" novalidate>
+					<div class="row">
+		        <div class="col-md-6 mb-3">
+		          <label for="first_name">Nom</label>
+		          <input type="text" class="form-control" ng-model="$ctrl.customer.first_name">
+		        </div>
+		        <div class="col-md-6 mb-3">
+		          <label for="last_name">Prénoms</label>
+		          <input type="text" class="form-control" ng-model="$ctrl.customer.last_name">
+		        </div>
+		      </div>
+					<div class="mb-3">
+						<label for="name">Raison sociale<span class="text-danger">*</span></label>
+						<input class="form-control" type="text" name="name" ng-model="$ctrl.customer.name" required>
+						<div ng-show="form.name.$touched && form.name.$invalid">
+							<span class="text-danger" ng-show="form.name.$error.required">Raison sociale est requis</span>
+						</div>
+					</div>
+					<div class="mb-3">
+						<label for="ncc">NCC<span class="text-danger"></span></label>
+						<input class="form-control" type="text" name="ncc" ng-model="$ctrl.customer.ncc">
+						<div ng-show="form.ncc.$touched && form.ncc.$invalid">
+							<span class="text-danger" ng-show="form.ncc.$error.required">Client ncc est requis</span>
+						</div>
+					</div>
+					<div class="mb-3">
+						<label for="phone">Telephone <span class="text-danger"></span></label>
+						<input type="text" class="form-control" name="phone" ng-model="$ctrl.customer.phone" maxlength="8">
+						<div ng-show="form.phone.$touched && form.phone.$invalid">
+							<span class="text-danger" ng-show="form.phone.$error.required">Téléphone est requis</span>
+						</div>
+					</div>
+					<div class="mb-3">
+						<label for="email">Email <span class="text-danger"></span></label>
+						<input type="email" class="form-control" name="email" ng-model="$ctrl.customer.email">
+						<div ng-show="form.email.$touched && form.email.$invalid">
+							<span class="text-danger" ng-show="form.email.$error.required">email adresse est requis</span>
+							<span class="text-danger" ng-show="form.email.$error.email">Une email adresse valide est requise</span>
+						</div>
+					</div>
+				</form>
 
       </div>
       <div class="modal-footer">
-        <button ng-disabled="form.$invalid" class="btn btn-primary" ng-click="$ctrl.save()">Save changes</button>
-        <button type="button" class="btn btn-secondary" ng-click="$ctrl.close()">Cancel</button>
+        <button ng-disabled="form.$invalid" class="btn btn-primary" ng-click="$ctrl.save()">Enregistrer</button>
+        <button type="button" class="btn btn-secondary" ng-click="$ctrl.close()">Annuler</button>
       </div>
     </div>
   </div>
