--- a/public/app/customer/customer-list.template.html
+++ b/public/app/customer/customer-list.template.html
@@ -1,14 +1,14 @@
 <div class="panel" ng-show="$ctrl.list.length > 0">
 	<div class="bar">
-		<h3 class="title">Customer</h3>
+		<h3 class="title">Clients</h3>
 		<div>
-			<button class="btn btn-success" ng-click="$ctrl.editCustomer()">New customer</button>
+			<button class="btn btn-success" ng-click="$ctrl.editCustomer()">Nouveau client</button>
 		</div>
 	</div>
 	
 	<div class="row mb-2">
 		<div class="col-4">
-			<input class="form-control" type="text" placeholder="Search a customer" ng-model="$ctrl.search">
+			<input class="form-control" type="text" placeholder="Rechercher un client" ng-model="$ctrl.search">
 		</div>
 	</div>
 	
@@ -16,9 +16,7 @@
 		<thead>
 			<tr>
 				<th>Nom</th>
-				<th>Téléphone</th>
-				<th>Email</th>
-				<th>Amount</th>
+				<th>Reste à payer</th>
 				<th class="last">
 					Action
 				</th>
@@ -27,9 +25,7 @@
 		<tbody>
 			<tr ng-repeat="c in $ctrl.list | filter:$ctrl.search">
 				<td>{{c.name}}</td>
-				<td>{{c.phone}}</td>
-				<td>{{c.email}}</td>
-				<td>{{c.overdue | number}}</td>
+				<td>{{c.sales | filter:{status:0} | sumOfValue:'balance' | number}}</td>
 				<td class="last">
 
 					<div class="btn-group">
@@ -38,7 +34,7 @@
 					    <span class="sr-only">Toggle Dropdown</span>
 					  </button>
 					  <div class="dropdown-menu dropdown-menu-right">
-					    <a class="dropdown-item" href="" ng-click="$ctrl.editCustomer( c )">Edit</a>
+					    <a class="dropdown-item" href="" ng-click="$ctrl.editCustomer( c )">Modifier</a>
 					  </div>
 					</div>
 
@@ -51,8 +47,9 @@
 
 <div class="panel" ng-show="$ctrl.list.length == 0">
 	<div class="empty-list text-center">
-		<h3 class="text-center">No customers</h3>
-		<button class="btn btn-success" ng-click="$ctrl.editCustomer()">New customer</button>
+		<span class="ion-contacts"></span>
+		<h3 class="text-center">Aucuns clients</h3>
+		<button class="btn btn-success" ng-click="$ctrl.editCustomer()">Nouveau client</button>
 	</div>
 </div>
 
