--- a/public/app/expense/expense-detail.template.html
+++ b/public/app/expense/expense-detail.template.html
@@ -2,25 +2,16 @@
 	<div class="bar">
 		<div>
 			<h3 class="title">{{$ctrl.expense.supplier.name}}</h3>
-			<a href="#/expense">back to expense list</a>
+			<a href="#/expense">retour à la liste</a>
 		</div>
 		<div class="d-flex align-items-center">
-			<h3 class="text-primary" ng-show="$ctrl.expense.status == 1">PAID</h3>
-			<h3 class="text-danger" ng-show="$ctrl.expense.status == 2">CANCEL</h3>
+			<h3 class="text-primary" ng-show="$ctrl.expense.status == 1">PAYE</h3>
+			<h3 class="text-danger" ng-show="$ctrl.expense.status == 2">SUPPRIME</h3>
             <h3 class="text-danger" ng-show="$ctrl.expense.status == 0">{{$ctrl.expense.amount | number}} F.CFA</h3>
 		</div>
 		<div class="d-flex align-items-center">
 			<button class="btn btn-secondary" ng-click="$ctrl.print()">Print</button>
-			<!-- Example split danger button -->
-			<div class="btn-group" ng-show="$ctrl.expense.status == 0">
-			  <button type="button" class="btn btn-danger" ng-click="$ctrl.save()">Validate and close</button>
-			  <button type="button" class="btn btn-danger dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			    <span class="sr-only">Toggle Dropdown</span>
-			  </button>
-			  <div class="dropdown-menu dropdown-menu-right">
-			    <a class="dropdown-item" href="" ng-click="$ctrl.dismiss()">Cancel</a>
-			  </div>
-			</div>
+			<a class="btn btn-danger" ng-show="$ctrl.expense.status == 0" href="#/expense/{{$ctrl.expense._id}}/supplier/{{$ctrl.expense.supplier_id}}">Modifier</a>
 		</div>
 	</div>
 	<div class="main">
@@ -30,8 +21,8 @@
                     <tr>
                         <th>Product / Service</th>
                         <th>Description</th>
-                        <th>Quantity</th>
-                        <th>Price ( F.CFA )</th>
+                        <th>Quantité</th>
+                        <th>Prix ( F.CFA )</th>
                         <th>Total ( F.CFA )</th>
                     </tr>
                 </thead>
