--- a/public/app/item/item-list.template.html
+++ b/public/app/item/item-list.template.html
@@ -1,14 +1,23 @@
 <div class="panel" ng-show="$ctrl.list.length > 0">
 	<div class="bar">
-		<h3 class="title">Products and services</h3>
+		<h3 class="title">Produits et services</h3>
 		<div>
-			<button class="btn btn-success" ng-click="$ctrl.editItem()">New</button>
+			<button class="btn btn-success" ng-click="$ctrl.editItem()">Nouveau produi & service</button>
 		</div>
 	</div>
-	<div class="row mb-2">
-		<div class="col-4">
-			<input class="form-control" type="text" placeholder="Search a item" ng-model="$ctrl.search">
-		</div>
+
+	<div class="btn-toolbar justify-content-between mb-2" role="toolbar" aria-label="Toolbar with button groups">
+	  <div class="input-group">
+	    <div class="input-group-prepend">
+	      <div class="input-group-text" id="btnGroupAddon2">@</div>
+	    </div>
+	    <input type="text" class="form-control" placeholder="Input group example" ng-model="$ctrl.search">
+	  </div>
+	  <!-- <div class="btn-group" role="group" aria-label="First group">
+	    <button type="button" class="btn btn-secondary">1</button>
+	    <button type="button" class="btn btn-secondary">2</button>
+	    <button type="button" class="btn btn-secondary">3</button>
+	  </div> -->
 	</div>
 	<table class="table">
 		<thead>
@@ -51,7 +60,7 @@
 <div class="panel" ng-show="$ctrl.list.length == 0">
 	<div class="empty-list text-center">
 		<h3 class="text-center">No items</h3>
-		<button class="btn btn-success" ng-click="$ctrl.editItem()">New customer</button>
+		<button class="btn btn-success" ng-click="$ctrl.editItem()">New product & service</button>
 	</div>
 </div>
 
