--- a/public/app/sale/sale-detail.template.html
+++ b/public/app/sale/sale-detail.template.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="d-flex align-items-center">
 			<button class="btn btn-secondary" ng-click="$ctrl.print()">Print</button>
-            <a class="btn btn-danger" ng-show="$ctrl.sale.status == 0" href="#/sale/edit/{{$ctrl.sale._id}}">edit</a>
+            <a class="btn btn-danger" ng-show="$ctrl.sale.status == 0" href="#/sale/{{$ctrl.sale._id}}/customer/{{$ctrl.sale.customer_id}}">edit</a>
 		</div>
 	</div>
 	<div class="main">
