--- a/public/app/supplier/supplier-detail.template.html
+++ b/public/app/supplier/supplier-detail.template.html
@@ -2,23 +2,23 @@
 	<div class="bar">
 		<div>
 			<h3 class="title">{{$ctrl.supplier.name}}</h3>
-			<a href="#/supplier">back to supplier list</a>
+			<a href="#/supplier">retour à la liste</a>
 		</div>
 		<div>
 			<button class="btn btn-secondary" ng-click="$ctrl.editMode = true">Modifier</button>
-			<a class="btn btn-success" href="#/supplier/{{$ctrl.supplier._id}}/expense/0">New expense</a>
+			<a class="btn btn-success" href="#/supplier/{{$ctrl.supplier._id}}/expense/0">Nouvelle achat</a>
 		</div>
 	</div>
 	<my-tabs>
-	  <my-pane title="Transaction List">
+	  <my-pane title="Liste des transactions">
 	    <div ng-show="$ctrl.expenses.length > 0">
 		    <table class="table">
 				<thead class="thead-ligth">
 					<tr>
 						<th>Date</th>
 						<th>NO.</th>
-						<th>Balance</th>
-						<th>Amount</th>
+						<th>Impayé</th>
+						<th>Montant</th>
 						<th>Status</th>
 						<th class="last">
 							Action
@@ -32,26 +32,33 @@
 						<td>{{c.balance}} F.CFA</td>
 						<td>{{c.amount}} F.CFA</td>
 						<td>
-							<b ng-show="c.status==0">Pending</b>
-							<b ng-show="c.status==1">Paid</b>
-							<b ng-show="c.status==2">Cancelled</b>
+							<b ng-show="c.status==0">En attente</b>
+							<b ng-show="c.status==1">Payé</b>
+							<b ng-show="c.status==2">Supprimé</b>
 						</td>
 						<td class="last">
-							<a ng-show="c.status==0" href="#/supplier/{{c.supplier_id}}/expense/{{c._id}}">Edit</a>
-							<a ng-show="c.status==1" href="" ng-click="$ctrl.printExpense( c )">Print</a>
-							<a ng-show="c.status==2" href="#/supplier/{{c.supplier_id}}/expense/{{c._id}}">Dismissed</a>
+							<a ng-show="c.status==0" href="#/supplier/{{c.supplier_id}}/expense/{{c._id}}">Modifier</a>
+							<a ng-show="c.status==1" href="" ng-click="$ctrl.printExpense( c )">Imprimé</a>
+							<a ng-show="c.status==2" href="#/supplier/{{c.supplier_id}}/expense/{{c._id}}">Annulé</a>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 	    </div>
+
 	    <div ng-show="$ctrl.expenses.length == 0">
-			<h1>No expenses</h1>
-		</div>
+		    	<div class="empty-list">
+					<h3 class="text-center">Aucun achat</h3>
+		    	</div>
+			</div>
 
 	  </my-pane>
 	  <my-pane title="Supplier details">
 	    <div class="container">
+	    	<div class="row p-2">
+	    		<div class="col-sm-2">Company name</div>
+	    		<div class="col-sm-10">{{$ctrl.supplier.name}}</div>
+	    	</div>
 	    	<div class="row p-2">
 	    		<div class="col-sm-2">First name</div>
 	    		<div class="col-sm-10">{{$ctrl.supplier.first_name}}</div>
@@ -59,10 +66,6 @@
 	    	<div class="row p-2">
 	    		<div class="col-sm-2">Last name</div>
 	    		<div class="col-sm-10">{{$ctrl.supplier.last_name}}</div>
-	    	</div>
-	    	<div class="row p-2">
-	    		<div class="col-sm-2">Company name</div>
-	    		<div class="col-sm-10">{{$ctrl.supplier.name}}</div>
 	    	</div>
 	    	<div class="row p-2">
 	    		<div class="col-sm-2">Email</div>
