--- a/public/app/supplier/supplier-edit.template.html
+++ b/public/app/supplier/supplier-edit.template.html
@@ -10,44 +10,44 @@
       <div class="modal-body">
         
         <form name="form" novalidate>
-			<div class="row">
-              <div class="col-md-6 mb-3">
-                <label for="first_name">First name</label>
-                <input type="text" class="form-control" ng-model="$ctrl.supplier.first_name">
-              </div>
-              <div class="col-md-6 mb-3">
-                <label for="last_name">Last name</label>
-                <input type="text" class="form-control" ng-model="$ctrl.supplier.last_name">
-              </div>
+    			<div class="row">
+            <div class="col-md-6 mb-3">
+              <label for="first_name">Nom</label>
+              <input type="text" class="form-control" ng-model="$ctrl.supplier.first_name">
             </div>
-			<div class="mb-3">
-				<label for="name">Company name <span class="text-danger">*</span></label>
-				<input class="form-control" type="text" name="name" ng-model="$ctrl.supplier.name" required>
-				<div ng-show="form.name.$touched && form.name.$invalid">
-					<span class="text-danger" ng-show="form.name.$error.required">Supplier name is required</span>
-				</div>
-			</div>
-			<div class="mb-3">
-				<label for="phone">Telephone <span class="text-danger">*</span></label>
-				<input type="text" class="form-control" name="phone" ng-model="$ctrl.supplier.phone" maxlength="8" required>
-				<div ng-show="form.phone.$touched && form.phone.$invalid">
-					<span class="text-danger" ng-show="form.phone.$error.required">Supplier phone number is required</span>
-				</div>
-			</div>
-			<div class="mb-3">
-				<label for="email">Email <span class="text-danger">*</span></label>
-				<input type="email" class="form-control" name="email" ng-model="$ctrl.supplier.email" required>
-				<div ng-show="form.email.$touched && form.email.$invalid">
-					<span class="text-danger" ng-show="form.email.$error.required">Supplier email adresse is required</span>
-					<span class="text-danger" ng-show="form.email.$error.email">Valid email adresse is required</span>
-				</div>
-			</div>
-		</form>
+            <div class="col-md-6 mb-3">
+              <label for="last_name">Prénoms</label>
+              <input type="text" class="form-control" ng-model="$ctrl.supplier.last_name">
+            </div>
+          </div>
+    			<div class="mb-3">
+    				<label for="name">Raison sociale<span class="text-danger">*</span></label>
+    				<input class="form-control" type="text" name="name" ng-model="$ctrl.supplier.name" required>
+    				<div ng-show="form.name.$touched && form.name.$invalid">
+    					<span class="text-danger" ng-show="form.name.$error.required">La raison sociale est requise</span>
+    				</div>
+    			</div>
+    			<div class="mb-3">
+    				<label for="phone">Telephone <span class="text-danger">*</span></label>
+    				<input type="text" class="form-control" name="phone" ng-model="$ctrl.supplier.phone" maxlength="8">
+    				<div ng-show="form.phone.$touched && form.phone.$invalid">
+    					<span class="text-danger" ng-show="form.phone.$error.required">Fournisseur phone number is required</span>
+    				</div>
+    			</div>
+    			<div class="mb-3">
+    				<label for="email">Email <span class="text-danger">*</span></label>
+    				<input type="email" class="form-control" name="email" ng-model="$ctrl.supplier.email">
+    				<div ng-show="form.email.$touched && form.email.$invalid">
+    					<span class="text-danger" ng-show="form.email.$error.required">Fournisseur email adresse is required</span>
+    					<span class="text-danger" ng-show="form.email.$error.email">Valid email adresse is required</span>
+    				</div>
+    			</div>
+  		  </form>
 
       </div>
       <div class="modal-footer">
-        <button ng-disabled="form.$invalid" class="btn btn-primary" ng-click="$ctrl.save()">Save changes</button>
-        <button type="button" class="btn btn-secondary" ng-click="$ctrl.close()">Cancel</button>
+        <button ng-disabled="form.$invalid" class="btn btn-primary" ng-click="$ctrl.save()">Enregistrer</button>
+        <button type="button" class="btn btn-secondary" ng-click="$ctrl.close()">Annuler</button>
       </div>
     </div>
   </div>
