--- a/public/login/spa.html
+++ b/public/login/spa.html
@@ -20,6 +20,7 @@
   <script src="spa.module.js"   ></script>
   <script src="spa.config.js"   ></script>
   <script src="spa.constant.js" ></script>
+  <script src="spa.data.js"     ></script>
 
   <link href="toast/toast.css" rel="stylesheet"/>
   <script src="toast/toast.component.js"></script>
