Corrrections sur la page dashboard

--- a/public/app/topnav/topnav.template.html
+++ b/public/app/topnav/topnav.template.html
@@ -1,6 +1,7 @@
 <header class="bar">
   <div class="logo">
       <h1>AMINA</h1>
+      <h3>{{$ctrl.setting.company_name}}</h3>
   </div>
   <ul class="nav justify-content-end">
     <li class="nav-item">
