--- a/public/app/dashboard/dashboard.template.html
+++ b/public/app/dashboard/dashboard.template.html
@@ -1,8 +1,35 @@
 <div class="panel">
 	<div class="row">
 		<div class="col-sm-8">
-			<h1>Hi, {{$ctrl.user.name}}</h1>
+			<h1>Bonjour,  &nbsp;&nbsp;<strong>{{$ctrl.user.name}}</strong></h1>
 		</div>
+	</div>
+	<h3>VENTE</h3>
+	<div class="row">
+	  <div class="col-sm-3">
+	    <div class="card">
+	      <div class="card-body">
+	      	<h3>{{$ctrl.sales | sumOfValue:'amount' | number}} F.CFA</h3>
+			<p>NET</p>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="col-sm-3">
+	    <div class="card">
+	      <div class="card-body">
+	        <h3>{{$ctrl.sales | sumOfValue:'balance' | number}} F.CFA</h3>
+			<p>IMPAYER</p>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="col-sm-3">
+	    <div class="card">
+	      <div class="card-body">
+	        <h3>{{$ctrl.sales | sumOfValue:'paid' | number}} F.CFA</h3>
+			<p>PAYER</p>
+	      </div>
+	    </div>
+	  </div>
 	</div>
 	<h3>BENEFICE</h3>
 	<div class="row">
