--- a/public/app/user/user-list.template.html
+++ b/public/app/user/user-list.template.html
@@ -5,7 +5,7 @@
 			<a href="#/role">roles</a>
 		</div>
 		<div>
-			<button class="btn btn-success" ng-click="$ctrl.editUser()">New</button>
+			<button class="btn btn-success" ng-click="$ctrl.editUser()">Nouveau</button>
 		</div>
 	</div>
 	<div class="bar">
@@ -26,7 +26,7 @@
 		<tbody>
 			<tr ng-repeat="c in $ctrl.list | filter:$ctrl.search">
 				<td>{{c.name}}</td>
-				<td>{{c.role_name}}</td>
+				<td>{{c.role.name}}</td>
 				<td>{{c.phone}}</td>
 				<td>{{c.email}}</td>
 				<td class="last">
