--- a/public/app/profil/profil-detail.template.html
+++ b/public/app/profil/profil-detail.template.html
@@ -24,7 +24,7 @@
 					</div>
 				</div>
 				<div class="col-sm-10" ng-hide="$ctrl.editMode">
-					<b>{{$ctrl.profil.role_name}}</b>
+					<b>{{$ctrl.profil.role.name}}</b>
 				</div>
 			</div>
 			<div class="form-group row">
