Corrrections affichage role

--- a/public/app/user/user-detail.template.html
+++ b/public/app/user/user-detail.template.html
@@ -17,5 +17,8 @@
 	  <my-pane title="User details">
 	    <user-info></user-info>
 	  </my-pane>
+	  <my-pane title="Liste des clients">
+	    <user-info></user-info>
+	  </my-pane>
 	</my-tabs>
 </div>
