--- a/public/app/user/user-list.template.html
+++ b/public/app/user/user-list.template.html
@@ -37,7 +37,7 @@
 					    <span class="sr-only">Toggle Dropdown</span>
 					  </button>
 					  <div class="dropdown-menu dropdown-menu-right">
-					    <a class="dropdown-item" href="" ng-click="$ctrl.editUser( c )">Edit</a>
+					    <a class="dropdown-item" href="" ng-click="$ctrl.editUser( c )">Modifier</a>
 					  </div>
 					</div>
 
