--- a/public/app/customer/customer-edit.template.html
+++ b/public/app/customer/customer-edit.template.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="mb-3">
 				<label for="phone">Telephone <span class="text-danger"></span></label>
-				<input type="text" class="form-control" name="phone" ng-model="$ctrl.customer.phone" maxlength="8">
+				<input type="text" class="form-control" name="phone" ng-model="$ctrl.customer.phone" maxlength="8" required>
 				<div ng-show="form.phone.$touched && form.phone.$invalid">
 					<span class="text-danger" ng-show="form.phone.$error.required">Téléphone est requis</span>
 				</div>
@@ -52,7 +52,13 @@
 			<div class="row">
 		        <div class="col-md-6 mb-3">
 		          <label for="entry_date">Date d'hadésion</label>
-		          <input type="text" class="form-control" ng-model="$ctrl.customer.entry_date">
+		          <input class="form-control"
+                       ng-model="$ctrl.customer.entry_date"
+                       ng-model-options="{ updateOn: 'blur' }"
+                       placeholder="Select a min date..."
+                       moment-picker="$ctrl.customer.entry_date"
+                       format="DD-MM-YYYY">
+		          <!-- <input type="text" class="form-control" ng-model="$ctrl.customer.entry_date"> -->
 		        </div>
 		        <div class="col-md-6 mb-3">
 		          <label for="entry_number">Numéro dadhésion</label>
@@ -86,6 +92,13 @@
 		        <label for="entry_date">Localisation</label>
 		        <input type="text" class="form-control" ng-model="$ctrl.customer.location">
 	      	</div>
+	      	<div class="mb-3">
+				<label for="accountant">Comptable <span class="text-danger"></span></label>
+				<select class="form-control" name="accountant" ng-model="$ctrl.customer.created_by">
+					<option value="">Choisir un service</option>
+					<option ng-repeat="u in $ctrl.users" value="u._id">{{u.name}}</option>
+				</select>
+			</div>
 		</form>
 
       </div>
